# Orbitdetermination

./: CMakeLists.txt  Gauss.h  Gibbs.h  OrbitFromAE.h  OrbitalElementsFromr2vr2.h  PlanetPoints.h  README.md  main.cpp  mathfunctions.h
